# bbbbb

./: CMakeLists.txt  README.md
cmake/: FindCPM.cmake
mech/: Chassis_30APR2022.step  Chassis_30APR2022.stl  chassis_faces_laser_cut.dxf  chassis_laser_cut_layout.dxf  motor_bracket.3mf  motor_bracket.iges  motor_bracket.step  motor_bracket_11MAY2022.stl  motor_bracket_back.dxf  motor_bracket_front.dxf  motor_bracket_side.dxf
